# gal-parser

./: .gitignore  Cargo.toml
benches/: queries.rs
browser/: Cargo.toml
browser/src/: main.rs
browser/web/: index.html
examples/: timing_parse.rs
queries/finbench/: simple_read_1.gql  simple_read_2.gql  simple_read_3.gql  simple_read_4.gql  simple_read_5.gql  simple_read_6.gql
queries/snb/: complex_read_1.gql  complex_read_10.gql  complex_read_11.gql  complex_read_12.gql  complex_read_13.gql  complex_read_14.gql  complex_read_2.gql  complex_read_3.gql  complex_read_4.gql  complex_read_5.gql  complex_read_6.gql  complex_read_7.gql  complex_read_8.gql  complex_read_9.gql  delete_1.gql  delete_2.gql  delete_3.gql  delete_4.gql  delete_5.gql  delete_6.gql  delete_7.gql  delete_8.gql  insert_1.gql  insert_2.gql  insert_3.gql  insert_4.gql  insert_5.gql  insert_6.gql  insert_7.gql  insert_8.gql  short_read_1.gql  short_read_2.gql  short_read_3.gql  short_read_4.gql  short_read_5.gql  short_read_6.gql  short_read_7.gql
src/: ast.rs  gql.pest  lib.rs
tests/: common_elements.rs  gql_terminal_character.rs  group_by_clause.rs  lexical.rs  predicates.rs  primitive_result_statement.rs  queries.rs  query_statements.rs  token_separator_identifier.rs  type_elements.rs  value_expression.rs
tests/common/: mod.rs
